# todo

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  _typos.toml  deny.toml  package-lock.json
assets/: screenshot.txt
memory_bank/: activeContext.md  code_examples.md  constants_template.md  index.md  productContext.md  progress.md  projectbrief.md  refactoring_plan.md  systemPatterns.md  tasks.md  techContext.md
src/: lib.rs  main.rs
src/components/: app_header.rs  filter_bar.rs  keyboard_shortcuts.rs  keyboard_shortcuts_handler.rs  mod.rs  search_box.rs  tags_filter.rs  theme_manager.rs  todo_app.rs  todo_form.rs  todo_item.rs  todo_list.rs  todo_state.rs
src/models/: mod.rs  todo.rs
src/utils/: constants.rs  mod.rs  storage.rs  theme.rs
tests/: storage_tests.rs  todo_model_tests.rs
